# hs-lex

./: .gitignore  Main.hs  hs-lex.cabal
src/: Lexer.hs  Parser.hs
